<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F6DDB"
    tools:context=".Activity.SplashActivity">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:src="@drawable/logos" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="458dp"
        android:gravity="center_horizontal|top"
        android:text="@string/news2day"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="38dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="595dp"
            android:gravity="center"
            android:text="@string/the_nextgens"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/start"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="275dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/get_started"
                android:textColor="#0F6DDA"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>